css/style.css
@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: #fafffd;
    color: #0e1012;
    max-inline-size: 1440px;
    margin-inline: auto;
}

.geologica {
    font-family: "Geologica", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings:
        "slnt" 0,
        "CRSV" 0,
        "SHRP" 0;
}

.skip {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

.skip:focus {
    position: static;
    width: auto;
    height: auto;
}

main.hero {
    block-size: 100vh;
    margin-inline: auto;
    padding: 40px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    justify-content: center;
    align-items: center;
}

h1 {
    font-size: clamp(32px, calc(3vw + 15px), 64px);
}

.braille,
.braille img {
    width: 100%;
    max-width: 550px;
    margin-inline: auto;
    mix-blend-mode: multiply;
    position: relative;
    transition: opacity 0.5s ease;
}

.braille::after {
    position: absolute;
    font-size: 36px;
    width: 150px;
    content: "Accessible solutions build for everyone";
    font-family: "Geologica", sans-serif;
    inset-inline-start: 40%;
    inset-block-start: 50%;
    translate: -50% -50%;
    z-index: 5;
    background-color: #ffffff;
    padding: 30px;
    transition: opacity 0.5s ease;
    opacity: 0;
}



@media screen and (pointer: fine) {
    .braille.clipper::after {
        clip-path: circle(63px at var(--xo) var(--yo));
        -webkit-clip-path: circle(63px at var(--xo) var(--yo));
        -moz-clip-path: circle(63px at var(--xo) var(--yo));
        -o-clip-path: circle(63px at var(--xo) var(--yo));
    }

    .braille:hover::after {
        opacity: 1;
    }
}

@media screen and (pointer: coarse) {
    .braille:hover::after {
        background-color: transparent;
        opacity: 1;
    }

    .braille::after {
        background-color: transparent;
    }

    .braille:hover img {
        opacity: 0.2;
    }
}

a {
    color: #4c72e6;
    text-decoration: none;
}

.brand {
    color: #4c72e6;
}

.logo {
    position: absolute;
    inset-inline-start: 0;
    inset-block-start: 0;
    margin: 30px;
}

section {
    padding: 40px;
}

h2#main,
h2.projects {
    font-size: 14px;
    font-weight: 300;
    color: #242a2f;
}

.cards {
    display: grid;
    margin-block-start: 40px;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    justify-content: flex-start;
    gap: 20px;
}

.cards a article {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 360px;
    gap: 10px;
    padding: 15px;
    border-radius: 24px;
    background-color: #e9ecef;
    transition: background-color 0.3s ease, box-shadow 0.3s ease;
}

.cards a {
    color: #0e1012;
}

.cards a:hover article {
    background-color: #e9ecef;
    box-shadow: 0px 4px 6px rgba(3, 7, 18, 0.02),
        0px 14px 26px rgba(3, 7, 18, 0.04),
        0px 32px 58px rgba(3, 7, 18, 0.06);
}

#projects article {
    position: relative;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    align-items: center;
    justify-content: center;
    margin-block-start: 30px;
    gap: 15px;
}

#projects article::before {
    position: absolute;
    content: "";
    background-color: #e9ecef;
    width: calc(100vw - 80px);
    height: 200px;
    z-index: -1;
    border-radius: 16px;
    inset-inline-start: 0;
}

@media screen and (width< 900px) {
    #projects article {
        background-color: #e9ecef;
        padding: 40px 25px;
        border-radius: 16px;
        text-align: center;
    }

    #projects article img {
        margin-inline: auto;
    }
}

#projects article h2 {
    text-align: center;
}

#projects article img {
    border-radius: 16px;
    max-inline-size: 100%;
    border: 4px solid #e2e2e2;
}

.web,
.mobile,
.graphic {
    display: inline-block;
    padding: 5px 10px;
    border-radius: 8px;
}

.web {
    background-color: #4c72e625;
    margin: 5px 0;
}

.graphic {
    background-color: #e6e66d8f;
    margin: 5px 0;
}

.mobile {
    background-color: #a239ee2f;
    margin: 5px;
}

footer {
    border-block-start: 1px solid #e4e4e4;
    margin-block-start: 20px;
    padding-block-start: 20px;
    text-align: center;
    margin-block-end: 20px;
}

footer div {
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-block-end: 10px;
}

footer div a {
    display: flex;
    align-items: center;
    gap: 5px;
    transition: opacity 0.3s ease;
    color: #0e1012;
}

footer div a,
footer span {
    opacity: 0.6;
}

footer div a:hover {
    opacity: 1;
}

.button {
    position: relative;
    display: block;
    background-color: transparent;
    border: none;
    color: #0e1012;
    font-size: 20px;
    padding: 10px;
    border-radius: 10px;
    inline-size: 100%;
    text-align: center;
}

.button::after {
    content: '';
    position: absolute;
    width: 6ch;
    transform: scaleX(0);
    height: 2px;
    bottom: 1px;
    left: calc(50% - 3ch);
    background-color: #4c72e6;
    transform-origin: bottom left;
    transition: transform 0.3s ease-out;
}

.button:hover::after {
    transform: scaleX(1);
}

[data-label] img {
    opacity: 0;
    translate: 0 45px;
    transition: opacity 0.6s ease, translate 0.6s ease;
}

[data-label].animate img {
    translate: 0 0;
    opacity: 1;
}

@media screen and (prefers-reduced-motion) {
    [data-label] img {
        opacity: 1;
        translate: 0 0;
        transition: unset;
    }

    [data-label].animate img {
        translate: 0 0;
        opacity: 1;
    }
}

